ssh: jump via tocco-proxy@git.tocco.ch
Use user 'tocco-proxy' on jump host. Only users with root privileges
can login as 'tocco'.

--- a/ssh/config
+++ b/ssh/config
@@ -30,11 +30,11 @@ Host *.tocco.ch
 # uncomment in case git.tocco.ch is down
 #
 # Match host "*.tocco.ch,!backup02.tocco.ch" exec "getent ahosts backup02.tocco.ch |grep -qv '^10\.'"
-#     ProxyJump backup02.tocco.ch:32711
+#     ProxyJump tocco-proxy@backup02.tocco.ch:32711
 
 # only use jump host if git.tocco.ch isn't in the local network
 Match host "*.tocco.ch,!git.tocco.ch" exec "getent ahosts git.tocco.ch |grep -qv '^10\.'"
-    ProxyJump git.tocco.ch
+    ProxyJump tocco-proxy@git.tocco.ch
 
 Host *.tocco.cust.vshn.net
     StrictHostKeyChecking yes
