--- a/ssh/config
+++ b/ssh/config
@@ -14,9 +14,17 @@ Host sfbtest.tocco.ch
     User tocco
     Port 4442
 
+Host sfbtest2.tocco.ch
+    User tocco
+    Port 4456
+
 Host sfbv.tocco.ch
     User tocco
-    Port 4450
+    Port 4452
+
+Host sfbvtest.tocco.ch
+    User tocco
+    Port 4454
 
 Host zb.tocco.ch zbtest.tocco.ch
     User tocco
