--- a/ssh/config
+++ b/ssh/config
@@ -33,6 +33,15 @@ Host zb.tocco.ch zbtest.tocco.ch
 Host backup02.tocco.ch backup2.tocco.ch
     Port 32711
 
+Host monitor01.tocco.ch
+    HostKeyAlgorithms +ssh-rsa
+
+Host *.tocco.ch *.tocco.cust.vshn.net
+    Ciphers -*-cbc
+    HostKeyAlgorithms -ssh-rsa
+    MACs -*-sha1,*-sha1-*
+    CASignatureAlgorithms -ssh-rsa-cert-*
+
 Host *.tocco.ch
     StrictHostKeyChecking yes
     User tocco
