--- a/ssh/config
+++ b/ssh/config
@@ -40,6 +40,7 @@ Host *.tocco.ch *.tocco.cust.vshn.net
     Ciphers -*-cbc
     HostKeyAlgorithms -ssh-rsa
     MACs -*-sha1,*-sha1-*
+    IgnoreUnknown CASignatureAlgorithms
     CASignatureAlgorithms -ssh-rsa-cert-*
 
 Host *.tocco.ch
